# mcp-dataforge

./: .dockerignore  .gitignore  =1.0  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/: .last-token
.superpowers/brainstorm/16945-1781743340/content/: a2a-communication.html  agent-implementation.html  arsitektur-highlevel.html  datamodel-config.html  deployment-packaging.html  mcp-architecture.html  multi-agent-model.html  naming-orchestrator.html  plugin-system.html  security-observability.html  testing-roadmap.html  waiting.html  website-clean-v2.html  website-clean.html  website-final.html
.superpowers/brainstorm/16945-1781743340/state/: server-info  server-instance-id
docs/guides/: creating-a-plugin.md  deployment.md
docs/superpowers/plans/: 2026-06-18-mcp-dataforge-phase1.md
docs/superpowers/specs/: 2026-06-18-mcp-dataforge-design.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/components/: DAGView.tsx
src/d4/: __init__.py  __main__.py
src/d4/agents/catalog/: __init__.py  server.py  server_sse.py
src/d4/agents/dq/: __init__.py  server.py  server_sse.py
src/d4/agents/observability/: __init__.py  server.py  server_sse.py
src/d4/agents/orchestration/: __init__.py  server.py  server_sse.py
src/d4/agents/pipeline/: __init__.py  server.py  server_sse.py
src/d4/agents/schema/: __init__.py  server.py  server_sse.py
src/d4/cli/: __init__.py  chat.py  main.py
src/d4/config/: __init__.py  loader.py
src/d4/models/: __init__.py  core.py
src/d4/orchestrator/: __init__.py  agent_runner.py  mcp_server.py  server.py
src/d4/registry/: __init__.py  agent_registry.py
src/d4/web/: server.py
src/d4/web/static/: index.html
src/mcp_dataforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/d4-plugin/: README.md  pyproject.toml
templates/d4-plugin/src/d4_plugin_<name>/: __init__.py  server.py
templates/d4-plugin/tests/: test_plugin.py
tests/: conftest.py  test_agent_registry.py  test_catalog_agent.py  test_cli.py  test_collaboration.py  test_config.py  test_dq_agent.py  test_e2e.py  test_mcp_server.py  test_models.py  test_observability_agent.py  test_orchestration_agent.py  test_orchestrator.py  test_pipeline_agent.py  test_schema_agent.py
