[project]
name = "mcp-dataforge"
version = "0.1.0"
description = "Multi-agent data engineering framework — MCP-native"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "sqlparse>=0.5",
    "duckdb>=1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
dataforge = "d4.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-click>=1.1",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
